--- a/projetSecuriteFinale/projetSecuriteFinale.csproj
+++ b/projetSecuriteFinale/projetSecuriteFinale.csproj
@@ -99,12 +99,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Eleve.cs" />
+    <Compile Include="EmailUtils.cs" />
+    <Compile Include="FormReinitialisation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormReinitialisation.Designer.cs">
+      <DependentUpon>FormReinitialisation.cs</DependentUpon>
+    </Compile>
     <Compile Include="GestionEleves.cs" />
     <Compile Include="GestionMotdePasse.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GestionMotdePasse.Designer.cs">
       <DependentUpon>GestionMotdePasse.cs</DependentUpon>
+    </Compile>
+    <Compile Include="gestionStages.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="gestionStages.Designer.cs">
+      <DependentUpon>gestionStages.cs</DependentUpon>
     </Compile>
     <Compile Include="pageAccueil.cs">
       <SubType>Form</SubType>
@@ -139,8 +152,16 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="securite.cs" />
+    <Compile Include="UtilisateurDAO.cs" />
+    <Compile Include="UtilsMotDePasse.cs" />
+    <EmbeddedResource Include="FormReinitialisation.resx">
+      <DependentUpon>FormReinitialisation.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GestionMotdePasse.resx">
       <DependentUpon>GestionMotdePasse.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="gestionStages.resx">
+      <DependentUpon>gestionStages.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pageAccueil.resx">
       <DependentUpon>pageAccueil.cs</DependentUpon>
