--- a/projetSecuriteFinale/App.config
+++ b/projetSecuriteFinale/App.config
@@ -15,4 +15,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+	<appSettings>
+		<add key="email" value="gestiondesmdplyceemariecurie@gmail.com"/>
+		<add key="mdp" value="wpmq ycof qpmd zcgc"/>
+	</appSettings>
+	<connectionStrings>
+		<add name="DefaultConnection"
+			 connectionString="server=localhost;database=gestion_securite;uid=root;pwd=;"
+			 providerName="MySql.Data.MySqlClient" />
+	</connectionStrings>
+
+
+
 </configuration>
