--- a/projetSecuriteFinale/projetSecuriteFinale.csproj
+++ b/projetSecuriteFinale/projetSecuriteFinale.csproj
@@ -99,6 +99,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Eleve.cs" />
+    <Compile Include="EmailUtils.cs" />
+    <Compile Include="FormReinitialisation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormReinitialisation.Designer.cs">
+      <DependentUpon>FormReinitialisation.cs</DependentUpon>
+    </Compile>
     <Compile Include="GestionEleves.cs" />
     <Compile Include="GestionMotdePasse.cs">
       <SubType>Form</SubType>
@@ -106,6 +113,7 @@
     <Compile Include="GestionMotdePasse.Designer.cs">
       <DependentUpon>GestionMotdePasse.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigratePasswords.cs" />
     <Compile Include="pageAccueil.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -139,6 +147,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="securite.cs" />
+    <Compile Include="utilisateurDAO.cs" />
+    <Compile Include="UtilsMotDePasse.cs" />
+    <EmbeddedResource Include="FormReinitialisation.resx">
+      <DependentUpon>FormReinitialisation.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GestionMotdePasse.resx">
       <DependentUpon>GestionMotdePasse.cs</DependentUpon>
     </EmbeddedResource>
